frontend/test/should_fail/array_and.grg
function and(ref a:array<int>) : boolean
{
	return(a.and());
}